update Google Search Engine

--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
 <meta name="twitter:description" content="Algorithm&amp;Mathematics, Music_Theory&amp;Rhythm_Game, Rationality&amp;Logicism, Peace&amp;Open_Source">
     <link rel="shortcut icon" href="/favicon.png" />
 
+        <meta name="google-site-verification" content="SpdfQhPs0dBU_hZ-m0h_qC57AxJ9_IDtvoz_aairUMc" />
     </head>
     <body class="">
     <script>
