update posts title

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/posts/misc/nyu/physics/">Physics1 - Motion</a>
+            <a href="/posts/misc/nyu/physics/">Physics - Motion</a>
         </h2>
     
         
