--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/posts/misc/physics/">Physics - Mechanics</a>
+            <a href="/posts/misc/physics-01/">Physics - Mechanics</a>
         </h2>
     
         
