--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/posts/math/calculus-integral/">Calculus - Integral</a>
+            <a href="/posts/math/cal-int/">Calculus - Integral</a>
         </h2>
     
         
